# SimPlay

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.rst  README.md  README.rst  pyproject.toml
.github/workflows/: build-simplay-jupyter.yml  lint-simplay.yml  pr-simplay-jupyter.yml  pr-simplay-web.yml  pr-simplay.yml  publish-simplay-jupyter.yml  publish-simplay-web.yml  publish-simplay.yml  publish.yml  test-simplay.yml
docs/: requirements.txt
docs/api_reference/: simplay.events.rst  simplay.rst  simplay.visualutil.rst
docs/source/: conf.py  contents.rst  examples.rst  in_depth.rst  index.rst  quickstart.rst  quickstart_jupyter.rst  usage.rst
docs/source/api_reference/: index.rst  simplay.components.rst  simplay.core.rst  simplay.events.rst  simplay.primitives.rst  simplay.rst  simplay.visualization.rst  simplay.visualutil.rst
docs/source/examples/: bank_renege.py  carwash.py  event_latency.py  gas_station.py  machine_shop.py  movie_renege.py  output.simplay  process_communication.py
src/simplay/: README.md  pyproject.toml
src/simplay-jupyter/: .coveragerc  .eslintrc.json  .gitignore  .prettierignore  DEVELOPMENT.md  LICENSE  LICENSE.txt  MANIFEST.in  README.dev.md  README.md  RELEASE.md  codecov.yml  install.json  jest.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  simplay-jupyter.json  simplay_jupyter.json  tsconfig.json  webpack.config.js
src/simplay-jupyter/.github/workflows/: build.yml  check-release.yml
src/simplay-jupyter/docs/: Makefile  environment.yml  make.bat
src/simplay-jupyter/docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
src/simplay-jupyter/examples/: events.simplay  introduction.ipynb  notebook_usage.ipynb
src/simplay-jupyter/simplay-jupyter/: __init__.py  _frontend.py  _version.py  example.py
src/simplay-jupyter/simplay-jupyter/nbextension/: extension.js
src/simplay-jupyter/simplay-jupyter/tests/: conftest.py  test_example.py  test_nbextension_path.py
src/simplay-jupyter/simplay_jupyter/: __init__.py  _frontend.py  _version.py  example.py  simplayhost.py
src/simplay-jupyter/simplay_jupyter/nbextension/: extension.js
src/simplay-jupyter/simplay_jupyter/tests/: conftest.py  test_example.py  test_nbextension_path.py
src/simplay-jupyter/src/: accurateSlider.ts  extension.ts  index.ts  plugin.ts  speedSelector.ts  startPauseButton.ts  stepInfo.ts  utils.ts  version.ts  widget.ts
src/simplay-jupyter/src/__tests__/: CustomResizeObserver.ts  accurateSlider.spec.ts  index.spec.ts  simplay_jupyter.spec.ts  speedSelector.spec.ts  startPauseButton.spec.ts  stepInfo.spec.ts  utils.spec.ts
src/simplay-jupyter/src/__tests__/resources/: events.simplay.json
src/simplay-jupyter/style/: base.css  index.css
src/simplay-jupyter/ui-tests/: README.md  jupyter_server_test_config.py  package.json
src/simplay-jupyter/ui-tests/examples/: events.simplay  introduction.ipynb  notebook_usage.ipynb  output.simplay
src/simplay-jupyter/ui-tests/tests/: simplay_jupyter.spec.ts
src/simplay-web/: .babelrc.json  .prettierignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
src/simplay-web/.husky/: pre-commit
src/simplay-web/src/: Area.ts  ContainerSetCapacityEvent.ts  ContainerSetCapacityEventArgs.ts  ContainerSetLevelEvent.ts  ContainerSetLevelEventArgs.ts  Entity.ts  Event.ts  EventAction.ts  EventArgs.ts  EventArgsCtor.ts  EventCtor.ts  EventFactory.ts  EventSerialized.ts  Grid.ts  MoveNearCellEvent.ts  MoveNearCellEventArgs.ts  MoveNearEvent.ts  MoveNearEventArgs.ts  ResourceSetCapacityEvent.ts  ResourceSetCapacityEventArgs.ts  ResourceSetUtilizationEvent.ts  ResourceSetUtilizationEventArgs.ts  SetDecoratingTextEvent.ts  SetDecoratingTextEventArgs.ts  SetInteractingEvent.ts  SetInteractingEventArgs.ts  SetNotInteractingEvent.ts  SetNotInteractingEventArgs.ts  SetPositionEvent.ts  SetPositionEventArgs.ts  SetSpriteFrameEvent.ts  SetSpriteFrameEventArgs.ts  SetTintColorEvent.ts  SetTintColorEventArgs.ts  SetVisibleEvent.ts  SetVisibleEventArgs.ts  SimplayArea.ts  SimplayContext.ts  SimplayGrid.ts  SimulationData.ts  (+9 more)
src/simplay-web/src/event/: ContainerSetCapacityEvent.ts  ContainerSetCapacityEventArgs.ts  ContainerSetLevelEvent.ts  ContainerSetLevelEventArgs.ts  Event.ts  EventArgs.ts  EventArgsCtor.ts  EventCtor.ts  EventFactory.ts  InteractionLine.ts  MoveNearCellEvent.ts  MoveNearCellEventArgs.ts  MoveNearEvent.ts  MoveNearEventArgs.ts  ResourceSetCapacityEvent.ts  ResourceSetCapacityEventArgs.ts  ResourceSetUtilizationEvent.ts  ResourceSetUtilizationEventArgs.ts  (+16 more)
src/simplay-web/test/: ContainerSetCapacityEvent.test.ts  ContainerSetCapacityEventArgs.test.ts  ContainerSetLevelEvent.test.ts  ContainerSetLevelEventArgs.test.ts  Entity.test.ts  EventFactory.integration.test.ts  EventFactory.test.ts  Grid.floss.test.ts  Grid.test.ts  MoveNearCellEvent.test.ts  MoveNearCellEventArgs.test.ts  MoveNearEvent.test.ts  MoveNearEventArgs.test.ts  ResourceSetCapacityEvent.test.ts  ResourceSetCapacityEventArgs.test.ts  ResourceSetUtilizationEvent.test.ts  ResourceSetUtilizationEventArgs.test.ts  SetDecoratingTextEvent.test.ts  SetDecoratingTextEventArgs.test.ts  SetInteractingEvent.test.ts  SetInteractingEventArgs.test.ts  SetNotInteractingEvent.test.ts  SetNotInteractingEventArgs.test.ts  SetPositionEvent.test.ts  SetPositionEventArgs.test.ts  SetSpriteFrameEvent.test.ts  SetSpriteFrameEventArgs.test.ts  SetTintColorEvent.test.ts  SetTintColorEventArgs.test.ts  SetVisibleEvent.test.ts  SetVisibleEventArgs.test.ts  SimplayContext.test.ts  SimulationData.test.ts  SimulationSpooler.test.ts  StoreSetCapacityEvent.test.ts  StoreSetCapacityEventArgs.test.ts  StoreSetContentEvent.test.ts  StoreSetContentEventArgs.test.ts  tsconfig.test.json
src/simplay-web/tester/: events.json  index.html
src/simplay/src/simplay/: __init__.py  animationutil.py  components.py  core.py  events.py  internals.py  primitives.py  visualization.py  visualutil.py
src/simplay/tests/: __init__.py  test_components.py  test_core.py  test_events.py  test_visualization.py  test_visualutil.py
(+35 files in other folders)
