[build-system]
requires = [
    "hatchling>=1.3.1",
    "jupyterlab==3.*",
]
build-backend = "hatchling.build"

[project]
name = "simplay-jupyter"
description = "Animate SimPy simulations in jupyter notebook"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.7"
authors = [
    { name = "SimPlay", email = "david.kuehnhanss@ost.ch, moritz.schiesser@ost.ch" },
]
keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "ipywidgets>=7.0.0",
]
version = "0.1.0.dev0"

[project.optional-dependencies]
docs = [
    "jupyter_sphinx",
    "nbsphinx",
    "nbsphinx-link",
    "pypandoc",
    "pytest_check_links",
    "recommonmark",
    "sphinx>=1.5",
    "sphinx_rtd_theme",
]
examples = []
test = [
    "nbval",
    "pytest-cov",
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/team-simplay/simplay"

[tool.hatch.build]
artifacts = [
    "simplay-jupyter/nbextension/index.*",
    "simplay-jupyter/labextension/*.tgz",
    "simplay-jupyter/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"simplay-jupyter/nbextension" = "share/jupyter/nbextensions/simplay-jupyter"
"simplay-jupyter/labextension" = "share/jupyter/labextensions/simplay-jupyter"
"./install.json" = "share/jupyter/labextensions/simplay-jupyter/install.json"
"./simplay-jupyter.json" = "etc/jupyter/nbconfig/notebook.d/simplay-jupyter.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "simplay-jupyter/nbextension/index.js",
    "simplay-jupyter/labextension/package.json",
]
skip-if-exists = [
    "simplay-jupyter/nbextension/index.js",
    "simplay-jupyter/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:prod"

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]
file = [
    { src = "pyproject.toml", version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\"" },
    { src = "simplay-jupyter/_version.py" },
]

[tool.tbump.version]
current = "0.1.0.dev0"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"
