[build-system]
requires = [
    "hatchling>=1.3.1",
    "jupyterlab==3.*",
    "simpy~=4.0.1",
    "simplay==0.1.0",   
    "jsons~=1.6.3"
]
build-backend = "hatchling.build"

[project]
name = "simplay_jupyter"
description = "Animate SimPy simulations in jupyter notebook"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.7"
authors = [
    { name = "David Kühnhanss", email = "david.kuehnhanss@ost.ch" },
    { name = "Moritz Schiesser", email = "moritz.schiesser@ost.ch" },
]
keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "ipywidgets>=7.0.0",
]
version = "0.1.0.dev1"

[project.optional-dependencies]
docs = [
    "jupyter_sphinx",
    "nbsphinx",
    "nbsphinx-link",
    "pypandoc",
    "pytest_check_links",
    "recommonmark",
    "sphinx>=1.5",
    "sphinx_rtd_theme",
]
examples = []
test = [
    "nbval",
    "pytest-cov",
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/team-simplay/SimPlay"

[tool.hatch.build]
artifacts = [
    "simplay_jupyter/nbextension/index.*",
    "simplay_jupyter/labextension/*.tgz",
    "simplay_jupyter/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"simplay_jupyter/nbextension" = "share/jupyter/nbextensions/simplay_jupyter"
"simplay_jupyter/labextension" = "share/jupyter/labextensions/simplay_jupyter"
"./install.json" = "share/jupyter/labextensions/simplay_jupyter/install.json"
"./simplay_jupyter.json" = "etc/jupyter/nbconfig/notebook.d/simplay_jupyter.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "simplay_jupyter/nbextension/index.js",
    "simplay_jupyter/labextension/package.json",
]
skip-if-exists = [
    "simplay_jupyter/nbextension/index.js",
    "simplay_jupyter/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:prod"

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]
file = [
    { src = "pyproject.toml", version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\"" },
    { src = "simplay_jupyter/_version.py" },
]

[tool.tbump.version]
current = "0.1.0.dev0"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"
